[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "modelica-tools",
]

[project.optional-dependencies]
test = ["pytest>=9.0.0", "pandas>=3.0.0"]

[tool.uv.sources]
modelica-tools = { workspace = true }
